Adiciona estrutura html básica

--- a/Pasta/teste.html
+++ b/Pasta/teste.html
@@ -1,1 +1,10 @@
-Meu nome é Daniel Queiroz.
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset = "utf-8" />
+        <title>Apresentação</title>
+    </head>
+   <body>
+       Meu nome é Daniel Queiroz.
+   </body>
+</html>
