Adiciono exemplo de lista ordenada

--- a/aula 04/lista-ordenada.html
+++ b/aula 04/lista-ordenada.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listas ordenadas</title>
+    <title>Listas Ordenadas</title>
 </head>
 <body>
     <h1>Listas Ordenadas</h1>
+    <section>
+        <h1>Últimos games que joguei</h1>
+        <ol>
+            <li>Warzone 2100</li>
+            <li>Among Us</li>
+            <li>Suspects</li>
+        </ol>
+    
+    </section>
 </body>
 </html>
