Adiciona nova sessão

--- a/aula 04/lista-nao-ordenada.html
+++ b/aula 04/lista-nao-ordenada.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <h1>Listas Não Ordenadas</h1>
+    <section>
+        <h1>Plataforma que jogo</h1>
     <ul>
         <li>Android</li>
         <li>PC</li>
         <li>Switch</li>
     </ul>
+    </section>
 </body>
 </html>
