Adiciona exemplo de linhas aninhadas

--- a/aula 04/lista-nao-ordenada.html
+++ b/aula 04/lista-nao-ordenada.html
@@ -16,5 +16,23 @@
         <li>Switch</li>
     </ul>
     </section>
+
+    <section>
+        <h1>Listas Aninhadas</h1>
+        <ul>
+            <li>Minas Gerais
+                <ul>
+                    <li>Juiz de Fora</li>
+                    <li>Cataguases</li>
+                </ul>
+            </li>
+            <li>Rio de Janeiro
+                <ul>
+                    <li>Três Rios</li>
+                    <li>Angra dos Reis</li>
+                </ul>
+            </li>
+        
+    </section>
 </body>
 </html>
