Criar documento inicial

--- a/aula 04/lista-nao-ordenada.html
+++ b/aula 04/lista-nao-ordenada.html
@@ -9,16 +9,16 @@
 <body>
     <h1>Listas Não Ordenadas</h1>
     <section>
-        <h1>Plataforma que jogo</h1>
+        <h1>Plataformas que jogo:</h1>
     <ul>
         <li>Android</li>
         <li>PC</li>
-        <li>Switch</li>
+        <li>Jogos de mesa</li>
     </ul>
     </section>
 
     <section>
-        <h1>Listas Aninhadas</h1>
+        <h1>Listas Aninhadas:</h1>
         <ul>
             <li>Minas Gerais
                 <ul>
@@ -32,7 +32,7 @@
                     <li>Angra dos Reis</li>
                 </ul>
             </li>
-        
+        </ul>
     </section>
 </body>
 </html>
