--- a/aula 04/lista-ordenada.html
+++ b/aula 04/lista-ordenada.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Listas Ordenadas</h1>
     <section>
-        <h1>Últimos games que joguei</h1>
-        <ol>
+        <h1>Últimos games que joguei:</h1>
+        <ol type="I">
             <li>Warzone 2100</li>
             <li>Among Us</li>
             <li>Suspects</li>
