Adicionar modo de preparo

--- a/aula 05/tabelas.html
+++ b/aula 05/tabelas.html
@@ -7,8 +7,22 @@
     <title>Tabelas</title>
 </head>
 <body>
-    <h1>
-        Tabelas
-    </h1>
+    <h1>Tabelas</h1>
+    <table border = 1>
+        <thead>
+            <caption>Pessoas e suas características individuais.</caption>
+            <tr><th>Nome</th>           <th>Idade</th>   <th>Peso</th>   <th>Comida preferida</th></tr>
+        </thead>
+        <tbody>
+            <tr><td>Huguinho</td>       <td>11</td>      <td>50,00</td>   <td>Chocolate</td></tr>
+            <tr><td>Zezinho</td>        <td>22</td>      <td>70,00</td>   <td>Tomate</td></tr>
+            <tr><td>Patricia</td>       <td>32</td>      <td>56,00</td>   <td>Bolo</td></tr>
+            <tr><td>Luizinho</td>       <td>50</td>      <td>75,00</td>   <td>Pudim de Leite</td></tr> 
+        </tbody>
+        <tfoot>
+            <tr><td colspan = 4>Fonte: internet</td></tr>
+        </tfoot>
+    </table>
+
 </body>
 </html>
