--- a/Receita Burrito/modo-de-preparo.html
+++ b/Receita Burrito/modo-de-preparo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingredientes</title>
+    <title>Modo de preparo</title>
 </head>
 <body>
 
@@ -17,7 +17,7 @@
         <li>O recheio deverá ser colocado um sobre o outro, em camadas</li>
         <li>Distribua o alface em cima da carne</li>
         <li>Adicione queijo</li>
-        <li>Feche a massa, colocando as pontas para a lateral oposta</li> 
+        <li>Por fim, feche a massa, colocando as pontas para a lateral oposta</li> 
     </ol>
 </section>
 
