--- a/Receita Burrito/descrição-ingredientes.html
+++ b/Receita Burrito/descrição-ingredientes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingredientes</title>
+    <title>Descrição ingredientes</title>
 </head>
 <body>
     <h1>Ingredientes da receita:</h1>
