Corrige outros erros

--- a/Receita Burrito/receita-burrito.html
+++ b/Receita Burrito/receita-burrito.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href = "ingredientes.html">Ingredientes</a></li>
                 <li><a href = "descrição-ingredientes.html">Descrição ingredientes</a></li>
-                <li><a href = "modo-de-preparo-html">Modo de preparo</a></li>
+                <li><a href = "mododepreparo.html">Modo de preparo</a></li>
             </ul>
         </nav>
    
