--- a/Receita Burrito/descrição-ingredientes.html
+++ b/Receita Burrito/descrição-ingredientes.html
@@ -8,40 +8,27 @@
 </head>
 <body>
     <h1>Ingredientes da receita:</h1>
-        <ul>
-            <li>1/2 xícara (chá) de farinha de trigo</li>
-                <ul>
-                <li>Serve para dar estrutura ao alimento</li>
-                </ul>
-            <li>1 xícara (chá) de farinha de milho fina</li>
-            <ul>
-                <li>Rica em nutrientes, vitaminas e fibras</li>
-                </ul>
-            <li>1 colher (sopa) de margarina</li>
-            <ul>
-                <li>Será utilizada para untar o alimento</li>
-                </ul>
-            <li>Sal</li>
-            <ul>
-                <li>Temperar a receita</li>
-                </ul>
-            <li>Água</li>
-            <li>Carne moída refogada</li>
-            <ul>
-                <li>Recheio principal</li>
-                </ul>
-            <li>Alface cortado em tiras bem finas</li>
-            <ul>
-                <li>Possui vitaminas e antioxidantes</li>
-                </ul>
-            <li>Tomate e cebola bem picadinhos</li>
-            <ul>
-                <li>Também servem para temperar a receita</li>
-                </ul>
-            <li>Queijo prato cortado em tiras ou ralado</li>
-            <ul>
-                <li>Um dos recheios principais</li>
-                </ul>
-        </ul>
+    <dl>
+    
+            <dt>1/2 xícara (chá) de farinha de trigo</dt>
+            <dd>Serve para dar estrutura ao alimento</dd>
+            <dt>1 xícara (chá) de farinha de milho fina</dt>
+            <dd>Rica em nutrientes, vitaminas e fibras</dd>
+            <dt>1 colher (sopa) de margarina</dt>
+            <dd>Será utilizada para untar o alimento</dd>
+            <dt>Sal</dt>
+            <dd>Temperar a receita</dd>
+            <dt>Água</dt>
+            <dd>Ingrediente padrão</dd>
+            <dt>Carne moída refogada</dt>
+            <dd>Recheio principal</li>
+            <dt>Alface cortado em tiras bem finas</dt>
+            <dd>Possui vitaminas e antioxidantes</dd>
+            <dt>Tomate e cebola bem picadinhos</dt>
+            <dd>Também servem para temperar a receita</dd>
+            <dt>Queijo prato cortado em tiras ou ralado</dt>
+            <dd>Um dos recheios principais</dd>
+    </dl>
+    <p>Volte para a <a href="../receita-burrito.html">página principal</a>.</p>
 </body>
 </html>
