--- a/aula 06/exem01.html
+++ b/aula 06/exem01.html
@@ -7,6 +7,8 @@
     <title>Exemplo 01: CSS</title>
 </head>
 <body>
-    <h1>Exemplo 01: CSS</h1>
+    
+    <h1 style="color: blue; text-decoration: underline;">Exemplo 01: CSS</h1>
+
 </body>
 </html>
