Altera estilo para embutido

--- a/aula 06/exem01.html
+++ b/aula 06/exem01.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 01: CSS</title>
+    <style>
+        h1, p {
+            color: blue; text-decoration: underline;
+        }
+
+        p {
+            color: red
+        }
+    </style>
 </head>
 <body>
     
-    <h1 style="color: blue; text-decoration: underline;">Exemplo 01: CSS</h1>
-
+    <h1>Exemplo 01: CSS</h1>
+    <p>Este é um parágrafo</p>
 </body>
 </html>
