--- a/aula 06/exem01.html
+++ b/aula 06/exem01.html
@@ -5,15 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 01: CSS</title>
-    <style>
-        h1, p {
-            color: blue; text-decoration: underline;
-        }
-
-        p {
-            color: red
-        }
-    </style>
+    <link href="estilo01.css" rel="stylesheet" >
 </head>
 <body>
     
