Adiciona seletores por id, classe e hierarquia

--- a/aula 06/exem02.html
+++ b/aula 06/exem02.html
@@ -15,6 +15,14 @@
             background-color: red;
             color: white;
         }
+        li#dialet{
+            background-color: green;
+        }
+        
+        li.turno {
+            text-decoration: underline;
+        }
+    
     </style>
 </head>
 <body>
@@ -22,15 +30,15 @@
     <ol>
         <li>Segunda</li>
             <ul>
-                <li>Manhã</li>
-                <li>Tarde</li>
-                <li>Noite</li>
+                <li class="turno">Manhã</li>
+                <li class="turno">Tarde</li>
+                <li class="turno">Noite</li>
             </ul>
         <li>Terça</li>
         <li>Quarta</li>
     </ol>
     <ul>
-        <li>Dia letivo</li>
+        <li id="dialet">Dia letivo</li>
         <li>Recesso</li>
         <li>Feriado</li>
     </ul>
