Adiciona elemento pertecente a várias classes

--- a/aula 06/exem02.html
+++ b/aula 06/exem02.html
@@ -19,8 +19,12 @@
             background-color: green;
         }
         
-        li.turno {
+        .turno {
             text-decoration: underline;
+        }
+
+        .dureza{
+            font-weight: bold;
         }
     
     </style>
@@ -28,12 +32,14 @@
 <body>
     <h1>Seletores</h1>
     <ol>
-        <li>Segunda</li>
+        <li>Segunda
             <ul>
-                <li class="turno">Manhã</li>
+                <li class="turno dureza">Manhã</li>
                 <li class="turno">Tarde</li>
                 <li class="turno">Noite</li>
             </ul>
+        </li>
+
         <li>Terça</li>
         <li>Quarta</li>
     </ol>
