--- a/Tabelas/parte1.html
+++ b/Tabelas/parte1.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela</title>
 </head>
-<body>
     <h1>Tabelas</h1>
+    <table border="1">
+        <tr><td>Número</td>   <td>Nome</td>        <td>Tipo</td>             <td>Pontos de Vida</td>    <td>Ataque</td>      <td>Defesa</td>      <td>Ataque Especial</td>      <td>Defesa Especial</td>      <td>Velocidade</td>      <td>Total</td></tr>   
+        <tr><td>395</td>     <td>Empoleon</td>     <td>Água/Aço</td>         <td>84</td>                <td>86</td>          <td>88</td>              <td>111</td>                 <td>101</td>                 <td>60</td>             <td>530</td></tr>
+        <tr><td>373</td>     <td>Salamence</td>    <td>Dragão/Voador</td>    <td>95</td>                <td>150</td>         <td>80</td>              <td>110</td>                 <td>80</td>                  <td>100</td>            <td>600</td></tr>
+        <tr><td>384</td>     <td>Rayquaza</td>     <td>Dragão/Voador</td>    <td>105</td>               <td>150</td>         <td>90</td>              <td>150</td>                 <td>90</td>                  <td>95</td>             <td>680</td></tr>         
+    
+    </table>
 </body>
 </html>
