Completa a mesclagem da tabela

--- a/Tabelas/parte1.html
+++ b/Tabelas/parte1.html
@@ -19,7 +19,7 @@
             <tr><td>395</td>     <td>Empoleon</td>     <td>Água/Aço</td>         <td>84</td>                <td>86</td>          <td>88</td>              <td>111</td>                 <td>101</td>                 <td>60</td>             <td>530</td></tr>
             <tr><td>373</td>     <td>Salamence</td>    <td>Dragão/Voador</td>    <td>95</td>                <td>150</td>         <td>80</td>              <td>110</td>                 <td>80</td>                  <td>100</td>            <td>600</td></tr>
             <tr><td>384</td>     <td>Rayquaza</td>     <td>Dragão/Voador</td>    <td>105</td>               <td>150</td>         <td>90</td>              <td>150</td>                 <td>90</td>                  <td>95</td>             <td>680</td></tr>           
-            <tr><th colspan="3">Média</th> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td></tr>
+            <tr><th colspan="3">Média</th> <td>94,6</td> <td>128,6</td> <td>86</td> <td>123,6</td> <td>90,3</td> <td>85</td> <td>603,3</td></tr>
         </tbody>
            
     </table>
