--- a/aula 07/emx01.html
+++ b/aula 07/emx01.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Caixa e Exibição</title>
+    <style>
+        div {
+            background-color: red;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <h1>CSS Caixa e Exibição</h1>
+    <div>A</div>
+    <div>B</div>
 </body>
 </html>
