Adiciona estilos individuais

--- a/aula 07/emx01.html
+++ b/aula 07/emx01.html
@@ -7,14 +7,24 @@
     <title>CSS Caixa e Exibição</title>
     <style>
         div {
+            display: block;
+            color:white;
+            background-color: grey;
+            width: 250px;
+            height: 100px;
+            overflow: hidden;
+        }
+        #a{
             background-color: red;
-            color: white;
+        }
+        #b {
+            background-color: green;
         }
     </style>
 </head>
 <body>
     <h1>CSS Caixa e Exibição</h1>
-    <div>A</div>
-    <div>B</div>
+    <div id="a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nihil officia soluta numquam illo aliquam possimus quasi magni deserunt architecto fuga expedita ullam, eveniet repellat itaque optio dolorem vitae illum.</div>
+    <div id="b">B</div>
 </body>
 </html>
