Adiciona espaçamento, borda e margem aos elementos

--- a/aula 07/emx01.html
+++ b/aula 07/emx01.html
@@ -10,9 +10,12 @@
             display: block;
             color:white;
             background-color: grey;
-            width: 250px;
-            height: 100px;
+            width: 150px;
+            height: 150px;
             overflow: hidden;
+            padding: 5px;
+            border:solid 2px black;
+            margin: 10px;
         }
         #a{
             background-color: red;
