--- a/aula 07/emx01.html
+++ b/aula 07/emx01.html
@@ -14,8 +14,9 @@
             height: 150px;
             overflow: hidden;
             padding: 5px;
-            border:solid 2px black;
+            border:solid 1px black;
             margin: 10px;
+            box-sizing: border-box
         }
         #a{
             background-color: red;
