--- a/aula 01/teste.html
+++ b/aula 01/teste.html
@@ -7,6 +7,7 @@
    <body>
        Exemplos de elementos de texto
 
-       Nesta página daremos exemplos de elementos de texto html como parágrafos, listas e tabelas.
+       Nesta página daremos exemplos de elementos de texto html como parágrafos, 
+       listas e tabelas.
    </body>
 </html>
