--- a/aula 01/teste.html
+++ b/aula 01/teste.html
@@ -5,7 +5,7 @@
         <title>Exemplo 01</title>
     </head>
    <body>
-       Exemplos de elementos de texto
+       Exemplos de elementos de textooo
 
        Nesta página daremos exemplos de elementos de texto html como parágrafos, 
        listas e tabelas.
